--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Taylor Dohmen"
-  avatar           : "myface.jpg"
+  avatar           : "profile.png"
   bio              : 
   location         : "Boulder, Colorado, USA"
   employer         :
