--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Taylor Dohmen"
 title_separator          : "-"
 name                     : &name "Taylor Dohmen"
 description              : &description "PhD student at the University of Colorado, Boulder"
-url                      : http://localhost:4000 #https://taylordohmen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://taylordohmen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "taylordohmen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
